<resources>
    <string name="app_name">P05-NDPSongs(Enhanced)</string>
    <string name="delete_all_songs">Delete All Songs</string>
    <string name="song_id">Song ID</string>
    <string name="song_title">Song Title</string>
    <string name="singers">Singers</string>
    <string name="year">Year</string>
    <string name="stars">Stars</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="enter_song_title_here">Enter song title here</string>
    <string name="enter_singers_name_s_here">Enter singers\' name(s) here</string>
    <string name="enter_year_of_release_here">Enter year of release here</string>
    <string name="insert">Insert</string>
    <string name="show_list">Show List</string>
    <string name="show_all_songs_with_5_stars">Show All Songs with 5 Stars</string>
</resources>